# azure-umqtt-c

./: .gitmodules  CMakeLists.txt  dependencies.cmake
inc/azure_umqtt_c/: mqtt_client_v5.h  mqtt_codec_info.h  mqtt_codec_util.h  mqtt_codec_v3.h  mqtt_codec_v5.h  mqtt_properties.h  mqttconst.h
jenkins/: debian_c.sh  linux_c_gcc44.sh  linux_c_option_test.sh  osx_gcc_openssl.sh  raspberrypi_c.sh  ubuntu1604_c.sh  ubuntu_clang.sh  windows_c.cmd
samples/: CMakeLists.txt
samples/mqtt_client_sample/: CMakeLists.txt  mqtt_client_sample.c
samples/mqtt_v5_sample/: CMakeLists.txt  mqtt_v5_sample.c
src/: mqtt_client.c  mqtt_client_v5.c  mqtt_codec_util.c  mqtt_codec_v3.c  mqtt_codec_v5.c  mqtt_properties.c
tests/: CMakeLists.txt
tests/umqtt_client_int/: CMakeLists.txt  main.c  umqtt_client_int.c
